# cc-sdd

./: .gitignore  AGENTS.md  CONTRIBUTING.md  pyproject.toml  pytest.ini  test_manual_enhanced.py
docs/: api_reference.md  editor_integrations.md  integration_guide.md
src/cc_sdd_mcp/: README.md  __init__.py  __main__.py  cli.py  server.py
src/cc_sdd_mcp/models/: config.py  specification.py  steering.py  validation.py
src/cc_sdd_mcp/tools/: registry.py  specification.py  steering.py  templates.py  validation.py
src/cc_sdd_mcp/utils/: filesystem.py  paths.py  templates.py
src/cc_sdd_mcp/workflows/: spec_workflow.py  validation_workflow.py
tests/: conftest.py  test_cli.py  test_config.py  test_enhanced_workflows.py  test_integration_spec_workflow.py  test_integration_validation.py  test_models.py  test_template_loading_fix.py  test_templates.py
tools/cc-sdd/templates/agents/claude-code-agent/commands/: spec-requirements.md
tools/cc-sdd/templates/agents/claude-code/commands/: spec-tasks.md
tools/cc-sdd/templates/agents/codex/commands/: kiro-spec-design.md  kiro-spec-tasks.md
tools/cc-sdd/templates/agents/cursor/commands/: spec-design.md
tools/cc-sdd/templates/agents/github-copilot/commands/: kiro-spec-design.prompt.md  kiro-spec-requirements.prompt.md  kiro-spec-tasks.prompt.md
tools/cc-sdd/templates/agents/windsurf/commands/: kiro-spec-requirements.md
tools/cc-sdd/templates/shared/settings/rules/: ears-format.md
tools/cc-sdd/templates/shared/settings/templates/specs/: design.md  requirements.md  tasks.md
